--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -35,6 +35,26 @@ h1 {
   line-height: 1.1;
 }
 
+span {
+  font-size: 1em;
+  padding: 0.6em 1.2em 0.6em 0;
+  margin-left: -36px;
+  font-weight: 500;
+}
+
+select {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding-left: 0;
+
+}
+
+input {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -46,7 +66,7 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+button:hover, select:hover, input:hover {
   border-color: #646cff;
 }
 button:focus,
